# xglfs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  xglfs.c  xglfs.h  xglfs_access.c  xglfs_access.h  xglfs_chmod.c  xglfs_chmod.h  xglfs_chown.c  xglfs_chown.h  xglfs_create.c  xglfs_create.h  xglfs_destroy.c  xglfs_destroy.h  xglfs_fgetattr.c  xglfs_fgetattr.h  xglfs_flush.c  xglfs_flush.h  xglfs_fops.h  xglfs_fsync.c  xglfs_fsync.h  xglfs_fsyncdir.c  xglfs_fsyncdir.h  xglfs_ftruncate.c  xglfs_ftruncate.h  xglfs_getattr.c  xglfs_getattr.h  xglfs_getxattr.c  xglfs_getxattr.h  xglfs_init.c  xglfs_init.h  xglfs_link.c  xglfs_link.h  xglfs_listxattr.c  xglfs_listxattr.h  xglfs_lock.c  xglfs_lock.h  xglfs_mkdir.c  (+37 more)
scripts/: mount.xglfs
